--- a/jobs/index.html
+++ b/jobs/index.html
@@ -9,6 +9,10 @@ use-site-title: true
     <p>Please <a href="https://forms.gle/urrCaKPEgf26JT3z7">fill in this form</a> and we'll add the job ad to this webpage. 
     For questions please contact <a href="mailto:oceanographyjobs@gmail.com">us</a>.</p>
 </div>
+<div>
+    <p>Note: We are currently looking for new committee members to contribute to our activities, including website updates. 
+    Contact <a href="mailto:webmaster@iapsoecs.org">us</a> if you are interested!</p>
+</div>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
